--- a/mooday-tracker/package.json
+++ b/mooday-tracker/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mood-tracker",
+  "name": "mooday-tracker",
   "version": "0.1.0",
   "private": true,
   "proxy":"http://localhost:5000/",
@@ -13,7 +13,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --live-reload=false",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
